画像アップロード機能を追加した

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
@@ -52,11 +52,11 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
   </style>
-</head>
+</head> -->
 
-<body class="rails-default-error-page">
+<!-- <body class="rails-default-error-page"> -->
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
+  <!-- <div class="dialog">
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
@@ -64,4 +64,34 @@
     <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
-</html>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>The page you were looking for doesn't exist (404)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  .error {
+    padding-top: 16%
+  }
+  p{
+    text-align: center;
+  }
+  img{
+    display: block;
+    margin: 0 auto;
+  }
+  </style>
+</head>
+
+<body>
+  <!-- This file lives in public/404.html -->
+  <div class="error">
+    <img src="/404.png">
+    <p>お探しのページは見つかりません。</p>
+  </div>
+</body>
+</html
