--- a/public/500.html
+++ b/public/500.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>We're sorry, but something went wrong (500)</title>
@@ -54,13 +54,43 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="rails-default-error-page"> -->
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
+  <!-- <div class="dialog">
     <div>
       <h1>We're sorry, but something went wrong.</h1>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+  </div>
+</body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>The page you were looking for doesn't exist (404)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  .error {
+    padding-top: 16%
+  }
+  p{
+    text-align: center;
+  }
+  img{
+    display: block;
+    margin: 0 auto;
+  }
+  </style>
+</head>
+
+<body>
+  <!-- This file lives in public/500.html -->
+  <div class="error">
+    <img src="/500.png">
+    <p>一時的なエラーが発生しました。</p>
   </div>
 </body>
 </html>
